# blog_api

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2025-04-13-153235_create_users_and_posts/: down.sql  up.sql
migrations/2025-04-13-170600_create_posts_tags/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
