[package]
name = "blog_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
diesel = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
